<resources>
    <string name="app_name">LE PETIT SOLISTE</string>
    <string name="TXTBTNconcerto">CONCERTO</string>
    <string name="TXTBTNsolfege">SOLFÈGE</string>
    <string name="TXTBTNmasterclass">MASTER CLASS</string>
    <string name="TXTBTNaguerri">AGUERRI</string>
    <string name="TXTtitleCours">Choisir un cours</string>
    <string name="TXTBTNMenuConnexion">Se connecter</string>
    <string name="TXTBTNMenuInscProf">Sign up Professeur</string>
    <string name="TXTBTNMenuInscEleve">Sign up élève</string>
    <string name="TXTtitleConcerto">Concerto</string>
    <string name="TXTtitleSolfege">Solfège</string>
    <string name="TXTtitleMasterClass">Master Class</string>
    <string name="TXTtitleAguerri">Aguerri</string>
    <string name="TXTtitleConnexion">Se connecter</string>
    <string name="TXTVadresseEmail">Adresse Email :</string>
    <string name="TXTVpasswd">Mot de passe :</string>
    <string name="PLACEHOLDadresseEmail">Entrez l\'adresse Email</string>
    <string name="PLACEHOLDpasswd">Entrez le mot de passe</string>
    <string name="TXTtitleInscProf">Inscription Prof</string>
    <string name="TXTtitleInscEleve">Inscription élève</string>
    <string name="TXTVconfirmPasswd">Confirmer :</string>
    <string name="PLACEHOLDconfirm">Confirmez le mot de passe</string>
    <string name="SCROLLinscription">Inscription</string>
    <string name="TXTVnom">Nom :</string>
    <string name="TXTVprenom">Prénom :</string>
    <string name="TXTVage">Age :</string>
    <string name="TXTVexp">Expérience :</string>
    <string name="PLACEHOLDnom">Entrez votre nom</string>
    <string name="PLACEHOLDprenom">Entrez votre prénom</string>
    <string name="PLACEHOLDage">Entrez votre âge</string>
    <string name="PLACEHOLDexp">Entrez votre expérience</string>
    <string name="TXTVdiplome">Diplôme :</string>
    <string name="PLACEHOLDdiplome">Entrez votre diplôme (Facultatif)</string>
    <string name="TXTVabonnement">Choisir un abonnement :</string>
    <string name="TXTanime">Animé par :</string>
    <string name="TXTle">Date :</string>
    <string name="TXThpSignup">Pas de compte ?</string>
    <string name="TXThpprof">Sign up Prof</string>
    <string name="TXThpeleve">Sign up Elève</string>
    <string name="TXTbtnInscription">S\'inscrire</string>
    <string name="TXTBTNlogout">Log out</string>
    <string name="TXTVtype">Type :</string>
    <string name="TXTVlieu">Lieu :</string>
    <string name="TXTBTNsub">reg</string>
</resources>