<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    tools:context=".InscEleveActivity">

    <TextView
        android:id="@+id/TXTtitleInscEleve"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/TXTtitleInscEleve"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="409dp"
        android:layout_height="match_parent"
        android:layout_marginTop="140dp"
        android:contentDescription="@string/SCROLLinscription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TXTtitleInscEleve">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/TXTinscEleveEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center"
                android:layout_marginEnd="90dp"
                android:gravity="center"
                android:text="@string/TXTVadresseEmail"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/INSCeleveEmail"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal|center"
                android:backgroundTint="@color/white"
                android:ems="10"
                android:hint="@string/PLACEHOLDadresseEmail"
                android:inputType="textEmailAddress"
                android:textColor="@color/white"
                android:textColorHint="@color/hintText"
                android:textColorLink="#FFFFFF" />

            <TextView
                android:id="@+id/TXTinscElevePasswd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="90dp"
                android:gravity="center"
                android:text="@string/TXTVpasswd"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/INSCelevePasswd"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal|center"
                android:backgroundTint="@color/white"
                android:ems="10"
                android:hint="@string/PLACEHOLDpasswd"
                android:inputType="textPassword"
                android:textColor="@color/white"
                android:textColorHint="@color/hintText"
                android:textColorLink="#FFFFFF" />

            <TextView
                android:id="@+id/TXTinscEleveConfirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="105dp"
                android:gravity="center"
                android:text="@string/TXTVconfirmPasswd"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/INSCeleveConfirm"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal|center"
                android:backgroundTint="@color/white"
                android:ems="10"
                android:hint="@string/PLACEHOLDconfirm"
                android:inputType="textPassword"
                android:textColor="@color/white"
                android:textColorHint="@color/hintText"
                android:textColorLink="#FFFFFF" />

            <TextView
                android:id="@+id/TXTinscEleveNom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="120dp"
                android:gravity="center"
                android:text="@string/TXTVnom"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/INSCeleveNom"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal|center"
                android:backgroundTint="@color/white"
                android:ems="10"
                android:hint="@string/PLACEHOLDnom"
                android:inputType="text"
                android:textColor="@color/white"
                android:textColorHint="@color/hintText"
                android:textColorLink="#FFFFFF" />

            <TextView
                android:id="@+id/TXTinscElevePrenom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="110dp"
                android:gravity="center"
                android:text="@string/TXTVprenom"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/INSCelevePrenom"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal|center"
                android:backgroundTint="@color/white"
                android:ems="10"
                android:hint="@string/PLACEHOLDprenom"
                android:inputType="text"
                android:textColor="@color/white"
                android:textColorHint="@color/hintText"
                android:textColorLink="#FFFFFF" />

            <TextView
                android:id="@+id/TXTinscEleveAge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="120dp"
                android:gravity="center"
                android:text="@string/TXTVage"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/INSCeleveAge"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal|center"
                android:backgroundTint="@color/white"
                android:ems="10"
                android:hint="@string/PLACEHOLDage"
                android:inputType="text"
                android:textColor="@color/white"
                android:textColorHint="@color/hintText"
                android:textColorLink="#FFFFFF" />

            <TextView
                android:id="@+id/TXTinscEleveAbo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="55dp"
                android:gravity="center"
                android:text="@string/TXTVabonnement"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <Spinner
                android:id="@+id/tarifSpinner"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="40dp"
                android:entries="@array/size_values"
                />

            <Button
                android:id="@+id/btnInscription"
                android:layout_marginBottom="40dp"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center"
                android:text="@string/TXTbtnInscription" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>