<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    tools:context=".LoginActivity">

  <TextView
      android:id="@+id/SignUpEleve"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="21dp"
      android:text="@string/TXThpeleve"
      android:textColor="@color/bluehp"
      android:textSize="20sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/SignUpProf" />

  <TextView
      android:id="@+id/noAccount"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="20dp"
      android:text="@string/TXThpSignup"
      android:textColor="@color/white"
      android:textSize="20sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/BTNconnexion" />

  <TextView
      android:id="@+id/TXTVcours2"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="70dp"
      android:text="@string/TXTtitleConnexion"
      android:textColor="@color/white"
      android:textSize="30sp"
      android:textStyle="bold"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.498"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <EditText
      android:id="@+id/LOGINadresseEmail"
      android:layout_width="300dp"
      android:layout_height="50dp"
      android:layout_marginTop="70dp"
      android:backgroundTint="@color/white"
      android:ems="10"
      android:hint="@string/PLACEHOLDadresseEmail"
      android:inputType="textEmailAddress"
      android:textColor="@color/white"
      android:textColorHint="@color/hintText"
      android:textColorLink="#FFFFFF"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/TXTVcours2" />

  <EditText
      android:id="@+id/LOGINpasswd"
      android:layout_width="300dp"
      android:layout_height="50dp"
      android:layout_marginTop="50dp"
      android:backgroundTint="@color/white"
      android:ems="10"
      android:hint="@string/PLACEHOLDpasswd"
      android:inputType="textPassword"
      android:textColor="@color/white"
      android:textColorHint="@color/hintText"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/LOGINadresseEmail" />

  <TextView
      android:id="@+id/TXTadresseEmail"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginEnd="180dp"
      android:text="@string/TXTVadresseEmail"
      android:textColor="@color/white"
      android:textSize="16sp"
      app:layout_constraintBottom_toTopOf="@+id/LOGINadresseEmail"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toStartOf="parent" />

  <TextView
      android:id="@+id/TXTVpasswd"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginEnd="180dp"
      android:text="@string/TXTVpasswd"
      android:textColor="@color/white"
      android:textSize="16sp"
      app:layout_constraintBottom_toTopOf="@+id/LOGINpasswd"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toStartOf="parent" />

  <Button
      android:id="@+id/BTNconnexion"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="25dp"
      android:background="@color/btn"
      android:text="@string/TXTtitleConnexion"
      android:textStyle="bold"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/LOGINpasswd" />

  <TextView
      android:id="@+id/SignUpProf"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="18dp"
      android:text="@string/TXThpprof"
      android:textColor="@color/bluehp"
      android:textSize="20sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/noAccount" />

</androidx.constraintlayout.widget.ConstraintLayout>