<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linear_layout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linear_layout2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/le"
                android:layout_width="140dp"
                android:layout_height="fill_parent"
                android:hint="@string/TXTle"
                android:paddingLeft="20dp"
                android:text="@string/TXTle"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/date"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:paddingLeft="10dp"
                android:textColor="@color/white"
                android:textSize="20sp" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_layout3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lieu"
                android:layout_width="140dp"
                android:layout_height="fill_parent"
                android:hint="@string/TXTVlieu"
                android:paddingLeft="20dp"
                android:text="@string/TXTVlieu"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/adresse"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:paddingLeft="10dp"
                android:textColor="@color/white"
                android:textSize="20sp" />

        </LinearLayout>
        <LinearLayout
            android:id="@+id/linear_layout4"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/type"
                android:layout_width="140dp"
                android:layout_height="fill_parent"
                android:hint="Anime"
                android:paddingLeft="20dp"
                android:text="@string/TXTVtype"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/nomType"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:paddingLeft="10dp"
                android:textColor="@color/white"
                android:textSize="20sp" />

        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>